[gd_scene load_steps=30 format=3 uid="uid://c8uaau87eirp3"]

[ext_resource type="Texture2D" uid="uid://bx6v3xo8gvwtt" path="res://Sprites/Lighting/light.png" id="1_koj1j"]
[ext_resource type="Script" path="res://Scripts/Enemies/En_Necro/Necro.gd" id="2_fa44h"]
[ext_resource type="Script" path="res://Scripts/Enemies/System/Damage_handler.gd" id="3_k8dfw"]
[ext_resource type="PackedScene" uid="uid://caav3i30vocuh" path="res://Scenes/Enemies/Health_bar.tscn" id="4_vfqrx"]
[ext_resource type="Script" path="res://Scripts/Enemies/En_Necro/Necro_States/N_Idle_state.gd" id="5_rcgol"]
[ext_resource type="Script" path="res://Scripts/Enemies/En_Necro/Necro_States/N_Chase_state.gd" id="6_fwuag"]
[ext_resource type="Script" path="res://Scripts/Enemies/En_Smasher/Default_States/D_Attack_state.gd" id="7_3ep7p"]
[ext_resource type="Script" path="res://Scripts/Enemies/En_Smasher/Default_States/D_Death_state.gd" id="8_dvhle"]
[ext_resource type="Script" path="res://Scripts/Enemies/En_Smasher/Default_States/D_Stun_state.gd" id="9_mx4l0"]
[ext_resource type="Script" path="res://Scripts/Enemies/En_Smasher/Default_States/D_Hit_state.gd" id="10_pe17p"]
[ext_resource type="Shader" path="res://Shaders/Flash.gdshader" id="11_net0d"]
[ext_resource type="SpriteFrames" uid="uid://nyb6ua3leec2" path="res://Sprites/Enemies/Necro/f4_phantasm.tres" id="12_vx872"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4qnd"]
shader = ExtResource("11_net0d")
shader_parameter/Smooth = true
shader_parameter/EnableOutline = false
shader_parameter/width = 10.0
shader_parameter/outline_color = Vector4(1, 0, 0, 0.05)
shader_parameter/selection_color = Vector4(1, 1, 1, 1)
shader_parameter/color_intensity = 0.0
shader_parameter/pixel_size = 1

[sub_resource type="Animation" id="Animation_f2auy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack/Area/Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fmrva"]
resource_name = "attack"
length = 2.33334
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4, 1.46667, 1.53333, 1.6, 1.66667, 1.73333, 1.8, 1.86667, 1.93333, 2, 2.06667, 2.13333, 2.2, 2.26667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Attack/Area/Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.933334, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.06667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_fire"
}]
}

[sub_resource type="Animation" id="Animation_f3myt"]
resource_name = "breathing"
length = 0.93334
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"breathing"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_6fvjx"]
resource_name = "death"
length = 2.33334
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4, 1.46667, 1.53333, 1.6, 1.66667, 1.73333, 1.8, 1.86667, 1.93333, 2, 2.06667, 2.13333, 2.2, 2.26667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Spawn_coins"
}]
}

[sub_resource type="Animation" id="Animation_sjjjs"]
resource_name = "hit"
length = 0.200007
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_74yob"]
resource_name = "idle"
length = 1.46667
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933334, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_ujtea"]
resource_name = "run"
length = 0.53334
loop_mode = 1
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8eb0m"]
_data = {
"RESET": SubResource("Animation_f2auy"),
"attack": SubResource("Animation_fmrva"),
"breathing": SubResource("Animation_f3myt"),
"death": SubResource("Animation_6fvjx"),
"hit": SubResource("Animation_sjjjs"),
"idle": SubResource("Animation_74yob"),
"run": SubResource("Animation_ujtea")
}

[sub_resource type="Animation" id="Animation_tacc7"]
resource_name = "Hit_effect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/EnableOutline")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:material:shader_parameter/color_intensity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.5, 0.5, 0.0]
}

[sub_resource type="Animation" id="Animation_7sgm3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/color_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:material:shader_parameter/EnableOutline")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u07lw"]
_data = {
"Hit_effect": SubResource("Animation_tacc7"),
"RESET": SubResource("Animation_7sgm3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2r4kg"]
size = Vector2(28, 41.75)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ohfhx"]
radius = 17.0
height = 46.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k0iaw"]
radius = 24.0
height = 324.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30t42"]
size = Vector2(46.25, 42.125)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ugl2"]
radius = 24.0
height = 48.0

[node name="Necro" type="Node2D"]

[node name="TestModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.408329, 0.408329, 0.408329, 1)

[node name="TestLight" type="PointLight2D" parent="."]
visible = false
position = Vector2(-37, -17)
texture = ExtResource("1_koj1j")
texture_scale = 0.5

[node name="Enemy" type="CharacterBody2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("2_fa44h")

[node name="HP" type="Node2D" parent="Enemy"]
position = Vector2(0, -9)
script = ExtResource("3_k8dfw")

[node name="Health" parent="Enemy/HP" instance=ExtResource("4_vfqrx")]

[node name="States" type="Node2D" parent="Enemy"]

[node name="Idle_state" type="Node2D" parent="Enemy/States"]
script = ExtResource("5_rcgol")

[node name="Turn_around" type="Timer" parent="Enemy/States/Idle_state"]

[node name="Chase_state" type="Node2D" parent="Enemy/States"]
script = ExtResource("6_fwuag")

[node name="Attack_state" type="Node2D" parent="Enemy/States"]
script = ExtResource("7_3ep7p")

[node name="Cooldown" type="Timer" parent="Enemy/States/Attack_state"]

[node name="Death_state" type="Node2D" parent="Enemy/States"]
script = ExtResource("8_dvhle")

[node name="Stun_state" type="Node2D" parent="Enemy/States"]
script = ExtResource("9_mx4l0")

[node name="Stun" type="Timer" parent="Enemy/States/Stun_state"]
one_shot = true

[node name="Hit_state" type="Node2D" parent="Enemy/States"]
script = ExtResource("10_pe17p")

[node name="Sprite" type="AnimatedSprite2D" parent="Enemy"]
material = SubResource("ShaderMaterial_c4qnd")
position = Vector2(0, -5)
sprite_frames = ExtResource("12_vx872")
animation = &"death"

[node name="Animation" type="AnimationPlayer" parent="Enemy"]
libraries = {
"": SubResource("AnimationLibrary_8eb0m")
}

[node name="Filter" type="AnimationPlayer" parent="Enemy"]
libraries = {
"": SubResource("AnimationLibrary_u07lw")
}

[node name="Collider" type="CollisionShape2D" parent="Enemy"]
position = Vector2(0, 20.875)
shape = SubResource("RectangleShape2D_2r4kg")
debug_color = Color(2.45467e-06, 0.634294, 0.4307, 0.42)

[node name="Attack" type="Node2D" parent="Enemy"]

[node name="Area" type="Area2D" parent="Enemy/Attack"]
collision_layer = 16
metadata/damage = 20

[node name="Collider" type="CollisionShape2D" parent="Enemy/Attack/Area"]
position = Vector2(46, 23)
shape = SubResource("CapsuleShape2D_ohfhx")
disabled = true
debug_color = Color(0.920209, 0.21956, 0.451397, 0.42)

[node name="Fire" type="Node2D" parent="Enemy"]
position = Vector2(45, 36)

[node name="Movement" type="Node2D" parent="Enemy"]

[node name="Ground" type="RayCast2D" parent="Enemy/Movement"]
position = Vector2(30, 5)
collision_mask = 2

[node name="Wall" type="RayCast2D" parent="Enemy/Movement"]
position = Vector2(30, 5)
rotation = -1.5708
target_position = Vector2(-4.33922e-05, 12)
collision_mask = 2

[node name="Vision" type="Area2D" parent="Enemy"]
collision_layer = 4

[node name="Collider" type="CollisionShape2D" parent="Enemy/Vision"]
position = Vector2(0, 21)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_k0iaw")
debug_color = Color(0.396078, 0.470588, 1, 0.054902)

[node name="Detection" type="Area2D" parent="Enemy"]
collision_layer = 4

[node name="Collider" type="CollisionShape2D" parent="Enemy/Detection"]
position = Vector2(25, 20.875)
shape = SubResource("RectangleShape2D_30t42")
debug_color = Color(0.917647, 0.243137, 0.403922, 0.117647)

[node name="Hitbox" type="Area2D" parent="Enemy"]
collision_layer = 4
collision_mask = 8

[node name="Collider" type="CollisionShape2D" parent="Enemy/Hitbox"]
position = Vector2(0, 21)
shape = SubResource("CapsuleShape2D_1ugl2")
debug_color = Color(0, 0.6, 0.701961, 0.380392)

[connection signal="timeout" from="Enemy/States/Idle_state/Turn_around" to="Enemy/States/Idle_state" method="_on_turn_around_timeout"]
[connection signal="timeout" from="Enemy/States/Attack_state/Cooldown" to="Enemy/States/Attack_state" method="_on_cooldown_timeout"]
[connection signal="timeout" from="Enemy/States/Stun_state/Stun" to="Enemy/States/Stun_state" method="_on_stun_timeout"]
[connection signal="area_entered" from="Enemy/Attack/Area" to="Enemy/States/Stun_state" method="_on_area_area_entered"]
[connection signal="body_entered" from="Enemy/Vision" to="Enemy" method="_on_vision_det_body_entered"]
[connection signal="body_exited" from="Enemy/Vision" to="Enemy" method="_on_vision_det_body_exited"]
[connection signal="body_entered" from="Enemy/Detection" to="Enemy" method="_on_attacker_det_body_entered"]
[connection signal="body_exited" from="Enemy/Detection" to="Enemy" method="_on_attacker_det_body_exited"]
[connection signal="area_entered" from="Enemy/Hitbox" to="Enemy" method="_on_hitbox_area_entered"]
